[package]
name = "sharded-thread"
version = "0.1.0"
authors = ["Anthony Griffon <anthony@griffon.one>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Expirement for now"
repository = "https://github.com/Miaxos/sharded-thread"
documentation = "https://docs.rs/sharded-thread/latest/sharded-thread/"


[dependencies]
futures = "0.3"
non_blocking_mutex = "3"
sharded_queue = "2.0"

[dev-dependencies]
cfg-if = "1"
monoio = { version = "0.2", features = ["sync"] }
insta = "1"                   # A snapshot testing library for Rust
lazy_static = "1.4"            # A macro for declaring lazily evaluated statics in Rust.
