[package]
name = "sharded-thread"
version = "1.1.0"
authors = ["Anthony Griffon <anthony@griffon.one>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Expirement for now"
repository = "https://github.com/Miaxos/sharded-thread"
documentation = "https://docs.rs/sharded-thread/latest/sharded-thread/"
keywords = ["glommio", "monoio", "io-uring", "shard", "thread"]


[dependencies]
futures = "0.3"
non_blocking_mutex = "3"
sharded_queue = "2.0"
thiserror = "1"

[dev-dependencies]
cfg-if = "1"
criterion = { version = "0.5", features = ["async", "html_reports"] }
monoio = { version = "0.2", features = ["sync"] }
flume = "0.11"

[[bench]]
name = "sharding_direct"
harness = false
